--- a/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/PostIT/PostIT.css
+++ b/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/PostIT/PostIT.css
@@ -80,19 +80,7 @@
     z-index: 120;
 }
 
-#typography {
-  width: 75px;
-  height: 75px;
-  stroke: black;
-}
-
-#palette {
-  width: 75px;
-  height: 75px;
-  stroke: black;
-}
-
-#pencil {
+#typography, #palette, #pencil {
   width: 75px;
   height: 75px;
   stroke: black;
