--- a/fbw-a32nx/src/systems/instruments/src/MsfsAvionicsCommon/common.scss
+++ b/fbw-a32nx/src/systems/instruments/src/MsfsAvionicsCommon/common.scss
@@ -17,7 +17,34 @@
   font-size: 24px;
   fill: $display-green;
   visibility: visible !important;
-  
+
   text-anchor: middle;
   font-family: "Ecam", monospace;
+}
+
+.MaintenanceMode {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+.EngineeringTestMode {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 100%;
+  height: 100%;
+  border: none;
+  z-index: 999;
+  visibility: visible !important;
+  background-image: url('./thalesTest.svg');
+  background-size: cover;
+}
+
+.EngineeringTestModeText {
+  font-size: 21px;
+  color: black;
 }
