move test image to correct location

--- a/fbw-a32nx/src/systems/instruments/src/Common/common.scss
+++ b/fbw-a32nx/src/systems/instruments/src/Common/common.scss
@@ -38,7 +38,7 @@
   height: 100%;
   border: none;
   z-index: 999;
-  background-image: url('./thalesTest.svg');
+  background-image: url('/Images/fbw-a32nx/Common/thalesTest.svg');
   background-size: cover;
   font-family: "Ecam", monospace;
 }
