added new textures to replace the old ones and commented out backlightbleed css

--- a/fbw-a32nx/src/systems/instruments/src/Common/pixels.scss
+++ b/fbw-a32nx/src/systems/instruments/src/Common/pixels.scss
@@ -1,3 +1,4 @@
+/* TO BE REMOVED TOGETHER WITH HOME COCKPIT MODE
 .BacklightBleed {
   content: '';
   width: 100%;
@@ -8,3 +9,4 @@
   background-color: rgba(0, 0, 255, 0.035);
   box-shadow: inset 0px 0px 30px 10px rgba(0, 76, 255, 0.08);
 }
+*/
