--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/CDU/A320_Neo_CDU.css
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/html_ui/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/CDU/A320_Neo_CDU.css
@@ -49,17 +49,14 @@
   justify-content: center;
 }
 
-#BacklightBleed {
+#BackglowCDU {
   content: '';
   width: 100%;
   height: 100%;
-  z-index: 998;
+  z-index: -99999;
   position: absolute;
-  opacity: 0.75;
-  /* subtle tint and edge bleed */
-  background-color: rgba(0, 0, 255, 0.025);
-  box-shadow: inset 0px 0px 30px 10px rgba(0, 75, 255, 0.04);
-  border-radius: 30px;
+  opacity: 1;
+  background-color: rgba(6, 6, 6, 1);
 }
 
 #Mainframe {
