added todo fixme notes

--- a/fbw-a32nx/src/systems/instruments/src/Common/pixels.scss
+++ b/fbw-a32nx/src/systems/instruments/src/Common/pixels.scss
@@ -1,4 +1,4 @@
-/* TO BE REMOVED TOGETHER WITH HOME COCKPIT MODE
+/* TODO FIXME: TO BE REMOVED TOGETHER WITH HOME COCKPIT MODE
 .BacklightBleed {
   content: '';
   width: 100%;
