--- a/fbw-a32nx/src/systems/instruments/src/PFD/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/PFD/style.scss
@@ -1,260 +1,279 @@
 @import "../MsfsAvionicsCommon/definitions";
-@import "animations";
 
 @font-face {
   font-family: "Ecam";
   //noinspection CssUnknownTarget
   src: url("/Fonts/fbw-a32nx/ECAMFontRegular.ttf") format("truetype");
+  //src: url("../../../../base/flybywire-aircraft-a320-neo/html_ui/Fonts/fbw-a32nx/ECAMFontRegular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
-.pfd-svg {
+@font-face {
+  font-family: "MFD-numbers";
+  //noinspection CssUnknownTarget
+  src: url("/Fonts/fbw-a32nx/HoneywellMCDU.ttf") format("truetype");
+  //src: url("../../../../base/flybywire-aircraft-a320-neo/html_ui/Fonts/fbw-a32nx/HoneywellMCDU.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.mfd-main {
   position: absolute;
   width: 768px;
-  height: 768px;
-  background: $display-background;
+  height: 1024px; /* 1:1.33 W:H  */
+  background: #040405;
+  /* background: $display-background; */
   font-family: "Ecam", monospace !important;
+  display: flex;
+  flex-direction: column;
 }
 
-.PulseCyanFill {
-  @include GenericPulsingFill($display-cyan, pulse-cyan-fill);
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
+.MFDLabel {
+  font-size: 20px;
+  color: white;
+  font-family: "Ecam", monospace;
 }
 
-.PulseAmber9Seconds {
-  @include GenericPulsingFill($display-amber, pulse-amber-fill);
-  animation-duration: 1s;
-  animation-iteration-count: 9;
+.MFDUnitLabel {
+  color: rgb(33, 33, 255);
+  font-size: 20px;
 }
 
-.BarAmber {
-  fill: $display-amber;
-  stroke: $display-amber;
-  stroke-width: 0.13px;
-}
-.BarRed {
-  fill: $display-red;
-  stroke: $display-red;
-  stroke-width: 0.11px;
+.MFDGreenValue {
+  font-family: "MFD-numbers", monospace;
+  color: #00ff00;
+  font-size: 25px;
 }
 
-.SmallStroke {
-  stroke-width: 0.10mm;
-  stroke-linecap: round;
+.MFDCyanValue {
+  font-family: "MFD-numbers", monospace;
+  color: cyan;
+  font-size: 25px;
 }
 
-.NormalStroke {
-  stroke-width: 0.16mm;
-  stroke-linecap: round;
-}
-
-.ThickStroke {
-  stroke-width: 0.22mm;
-  stroke-linecap: round;
-}
-
-.HugeStroke {
-  stroke-width: 0.32mm;
-  stroke-linecap: round;
-}
-
-.SmallOutline {
-  stroke-width: 0.09mm;
-  stroke: $display-background !important;
-  paint-order: markers stroke fill;
-}
-.NormalOutline {
-  stroke-width: 0.21mm;
-  stroke: $display-background;
-  fill: none;
-  stroke-linecap: round;
-}
-.ThickOutline {
-  stroke-width: 0.29mm;
-  stroke: $display-background;
-  fill: none;
-  stroke-linecap: round;
-}
-.HugeOutline {
-  stroke-width: 0.39mm;
-  stroke: $display-background;
-  fill: none;
-  stroke-linecap: round;
-}
-
-.CornerRound {
-  stroke-linejoin: round;
-}
-
-.TextOutline {
-  paint-order: stroke fill markers;
-
-  stroke-width: 0.05mm;
-  stroke: $display-background !important;
-}
-
-.FontLargest {
-  font-size: 7px;
-}
-
-.FontLarge {
-  font-size: 6.5px;
-}
-
-.FontMedium {
-  font-size: 6px;
-}
-
-.FontSmall {
-  font-size: 5px;
-}
-
-.FontSmallest {
-  font-size: 4.5px;
-}
-
-.FontTiny {
-  font-size: 4px;
-}
-
-.StartAlign {
-  text-align: start;
-  text-anchor: start;
-}
-.MiddleAlign {
+.MFDButton {
+  font-size: 22px;
+  background-color: #3c3c3c;
+  color: white;
+  font-family: "Ecam", monospace;
   text-align: center;
-  text-anchor: middle;
-}
-.EndAlign {
-  text-align: end;
-  text-anchor: end;
+  border: 2px outset lightgrey;
+  padding: 9px 12px 5px 12px;
 }
 
-.Magenta {
-  fill: none;
-  stroke: $display-magenta;
-}
-text.Magenta {
-  fill: $display-magenta;
-  stroke: none;
-}
-
-.Cyan {
-  fill: none;
-  stroke: $display-cyan;
-}
-text.Cyan {
-  fill: $display-cyan;
-  stroke: none;
-}
-tspan.Cyan {
-  fill: $display-cyan;
-  stroke: none;
+.MFDSysSelectorOuter {
+  width: 25%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #3c3c3c;
+  border: 2px outset lightgrey;
 }
 
-.None {
-  fill: none;
-  stroke: none;
+.MFDSysSelectorLabel {
+  font-size: 22px;
+  color: cyan;
+  font-family: "Ecam", monospace;
+  padding: 2px 5px 2px 5px;
 }
 
-.White {
-  fill: none;
-  stroke: $display-white;
-}
-.White.Fill {
-  fill: $display-white;
-  stroke: none;
-}
-text.White {
-  fill: $display-white;
-  stroke: none;
+.MFDDropdownOuter {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #3c3c3c;
+  border: 2px outset lightgrey;
 }
 
-.Green {
-  stroke: $display-green;
-  fill: none;
+.MFDDropdownLabel {
+  font-size: 22px;
+  color: cyan;
+  font-family: "Ecam", monospace;
+  padding: 2px 10px 2px 10px;
 }
 
-.Green.Fill {
-  fill: $display-green;
-  stroke: none;
+.MFDPageSelectorLabel {
+  font-size: 22px;
+  color: white;
+  font-family: "Ecam", monospace;
+  padding: 2px;
+  text-align: center;
+  display: inline;
+  margin: 10px;
+  padding: 4px;
 }
 
-text.Green {
-  fill: $display-green;
-  stroke: none;
+.MFDPageSelectorLabel.active {
+  border: 1px solid white;
 }
 
-.Amber {
-  stroke: $display-amber;
-  fill: none;
-}
-.Amber.Fill {
-  fill: $display-amber;
-  stroke: none;
-}
-text.Amber {
-  fill: $display-amber;
-  stroke: none;
-}
-
-.Yellow {
-  stroke: $display-yellow;
-  fill: none;
-}
-.Yellow.Fill {
-  fill: $display-yellow;
-  stroke: none;
-}
-text.Yellow {
-  fill: $display-yellow;
-  stroke: none;
+.MFDPageSelectorOuter {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  align-items: center;
+  background-color: #3c3c3c;
+  border-top: 2px solid lightgrey;
+  border-left: 2px solid lightgrey;
+  border-bottom: 2px solid rgba(211, 211, 211, 0.432);
+  border-right: 2px solid rgba(211, 211, 211, 0.432);
 }
 
-.Red {
-  stroke: $display-red;
-  fill: none;
-}
-.Red.Fill {
-  fill: $display-red;
-  stroke: none;
-}
-text.Red {
-  fill: $display-red;
-  stroke: none;
+.MFDPageContainer {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
 }
 
-.Grey {
-  stroke: $display-grey;
-  fill: none;
+.spacingRight {
+  margin-right: 15px;
 }
 
-.EarthFill {
-  fill: #9c480c;
-}
-.SkyFill {
-  fill: #0698ff;
-}
-.BlackFill {
-  fill: $display-background;
+.leadingUnit {
+  margin-right: 6px;
 }
 
-.TapeBackground {
-  fill: $display-grey;
-  stroke: none;
-}
-.BackgroundFill {
-  fill: $display-background;
-  stroke: none;
-  fill-rule: evenodd;
+.trailingUnit {
+  margin-left: 6px;
 }
 
-.ModeChangedPath {
-  visibility: visible !important;
+.MFDTextInput {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: baseline;
+  padding: 4px;
+  border: 2px inset lightgrey;
+  text-align: center;
+  vertical-align: center;
 }
 
-.HiddenElement {
+.MFDTopTabNavigatorContainer {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin: 2px;
+}
+
+.MFDTopTabNavigatorBar {
+  display: flex;
+  height: 36px;
+}
+
+.leftedge {
+  background: linear-gradient(100deg, #040405 5%, white 50%, #040405 50%);
+  width: 20px;
+}
+
+.MFDTopTabNavigatorBarElementOuter {
+  display: flex;
+  flex: 1;
+  border-bottom: 2px solid lightgrey;
+}
+
+.MFDTopTabNavigatorBarElementLabel {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  color: white;
+  background-color: #3c3c3c;
+  border-top: 2px solid lightgrey;
+  font-size: 20px;
+  padding: 6px 0px 2px 0px;
+}
+
+.MFDTopTabNavigatorBarElementLabel.active {
+  background-color: #040405;
+}
+
+.MFDTopTabNavigatorBarElementOuter.active {
+  background-color: #040405;
+  border-bottom-style: none;
+}
+
+.MFDTopTabNavigatorTabContent {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  border: 2px outset lightgrey;
+  border-top-style: none;
+  padding: 10px;
+}
+
+.MFDLabelValueContainer {
+  padding: 7px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+
+
+
+
+
+
+
+/* Customize the label (the container) */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 30px;
+  margin-left: 15px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color: lightgrey;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: 1px solid lightgrey;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  border: 1px solid lightgrey;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
   display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+  top: 3px;
+  left: 3px;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background: cyan;
 }
