--- a/fbw-a32nx/src/systems/instruments/src/NDv2/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/NDv2/style.scss
@@ -1,4 +1,4 @@
-@import "shared/definitions";
+@import "../MsfsAvionicsCommon/definitions.scss";
 @import "animations";
 
 @font-face {
@@ -309,15 +309,6 @@ rect.shadow {
   display: none;
 }
 
-.BacklightBleed {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 998;
-  opacity: 0.75;
-  background-color: rgba(0, 0, 255, 0.025);
-  box-shadow: inset 0px 0px 30px 10px rgba(0, 75, 255, 0.04);
-}
 
 .chrono {
   font-family: "NDChrono", monospace !important;
