--- a/fbw-a32nx/src/systems/instruments/src/NDv2/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/NDv2/style.scss
@@ -1,5 +1,4 @@
-@import "../MsfsAvionicsCommon/definitions.scss";
-@import "animations";
+@import "../Common/definitions";
 
 @font-face {
   font-family: "Ecam";
@@ -19,12 +18,9 @@
 
 .nd-svg {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 768px;
   height: 768px;
   background: transparent;
-  //background: $display-background;
   font-family: "Ecam", monospace !important;
 }
 
@@ -36,136 +32,32 @@
   transform: rotateX(0deg);
   background: none;
 }
-
-.PulseCyanFill {
-  @include GenericPulsingFill($display-cyan, pulse-cyan-fill);
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
+.nd-inverted-map-area {
+  background: $display-background;
+  fill: rgb(4,4,4);
 }
 
-.PulseAmber9Seconds {
-  @include GenericPulsingFill($display-amber, pulse-amber-fill);
-  animation-duration: 1s;
-  animation-iteration-count: 9;
+.GtLayer {
+  -webkit-transform: rotateX(0deg);
 }
 
-.BarAmber {
-  fill: $display-amber;
-  stroke: $display-amber;
-  stroke-width: 0.13px;
-}
-.BarRed {
-  fill: $display-red;
-  stroke: $display-red;
-  stroke-width: 0.11px;
-}
-
-.SmallStroke {
-  stroke-width: 0.10mm;
-  stroke-linecap: round;
-}
-
-.NormalStroke {
-  stroke-width: 0.16mm;
-  stroke-linecap: round;
-}
-
-.ThickStroke {
-  stroke-width: 0.22mm;
-  stroke-linecap: round;
-}
-
-.HugeStroke {
-  stroke-width: 0.32mm;
-  stroke-linecap: round;
-}
-
-.SmallOutline {
-  stroke-width: 0.09mm;
-  stroke: $display-background !important;
-  paint-order: markers stroke fill;
-}
-.NormalOutline {
-  stroke-width: 0.21mm;
-  stroke: $display-background;
-  fill: none;
-  stroke-linecap: round;
-}
-.ThickOutline {
-  stroke-width: 0.29mm;
-  stroke: $display-background;
-  fill: none;
-  stroke-linecap: round;
-}
-.HugeOutline {
-  stroke-width: 0.39mm;
-  stroke: $display-background;
-  fill: none;
-  stroke-linecap: round;
-}
-
-.CornerRound {
-  stroke-linejoin: round;
-}
-
-.TextOutline {
-  paint-order: stroke fill markers;
-
-  stroke-width: 0.05mm;
-  stroke: $display-background !important;
-}
-
-$font-factor: 5;
-
-.FontLargest {
-  font-size: #{7px * $font-factor};
-}
-
-.FontLarge {
-  font-size: #{6.5px * $font-factor};
-}
-
-.FontMedium {
-  font-size: #{6px * $font-factor};
-}
-
-.FontIntermediate {
-  font-size: #{5.5px * $font-factor};
-}
-
-.FontSmall {
-  font-size: #{5px * $font-factor};
-}
-
-.FontSmallest {
-  font-size: #{4.5px * $font-factor};
-}
-
-.FontTiny {
-  font-size: #{4px * $font-factor};
-}
-
-.StartAlign {
-  text-align: start;
-  text-anchor: start;
-}
 .MiddleAlign {
-  text-align: center;
   text-anchor: middle;
-}
-.EndAlign {
-  text-align: end;
-  text-anchor: end;
 }
 
 .Magenta {
   fill: none;
   stroke: $display-magenta;
 }
-text.Magenta,
-tspan.Magenta,
+
+// Used for the speed change dot
+.Magenta.Fill {
+  fill: $display-magenta;
+  stroke: none;
+}
+
 .Magenta text,
-.Magenta tspan {
+text.Magenta {
   fill: $display-magenta;
   stroke: none;
 }
@@ -174,16 +66,22 @@ tspan.Magenta,
   fill: none;
   stroke: $display-cyan;
 }
-text.Cyan,
-tspan.Cyan,
-.Cyan text,
-.Cyan tspan {
+
+.Cyan.Fill {
   fill: $display-cyan;
   stroke: none;
 }
 
-.None {
-  fill: none;
+.Cyan text,
+text.Cyan,
+.Cyan tspan,
+tspan.Cyan {
+  fill: $display-cyan;
+  stroke: none;
+}
+
+tspan.Cyan {
+  fill: $display-cyan;
   stroke: none;
 }
 
@@ -191,14 +89,14 @@ tspan.Cyan,
   fill: none;
   stroke: $display-white;
 }
+
 .White.Fill {
   fill: $display-white;
   stroke: none;
 }
-text.White,
-tspan.White,
+
 .White text,
-.White tspan {
+text.White {
   fill: $display-white;
   stroke: none;
 }
@@ -213,10 +111,10 @@ tspan.White,
   stroke: none;
 }
 
-text.Green,
-tspan.Green,
 .Green text,
-.Green tspan {
+text.Green,
+.Green tspan,
+tspan.Green {
   fill: $display-green;
   stroke: none;
 }
@@ -225,10 +123,9 @@ tspan.Green,
   stroke: $display-amber;
   fill: none;
 }
-text.Amber,
-tspan.Amber,
+
 .Amber text,
-.Amber tspan {
+text.Amber {
   fill: $display-amber;
   stroke: none;
 }
@@ -237,14 +134,14 @@ tspan.Amber,
   stroke: $display-yellow;
   fill: none;
 }
+
 .Yellow.Fill {
   fill: $display-yellow;
   stroke: none;
 }
-text.Yellow,
-tspan.Yellow,
+
 .Yellow text,
-.Yellow tspan {
+text.Yellow {
   fill: $display-yellow;
   stroke: none;
 }
@@ -253,44 +150,36 @@ tspan.Yellow,
   stroke: $display-red;
   fill: none;
 }
+
 .Red.Fill {
   fill: $display-red;
   stroke: none;
 }
-text.Red,
-tspan.Red,
+
 .Red text,
-.Red tspan {
+text.Red {
   fill: $display-red;
   stroke: none;
 }
 
-.Grey {
-  stroke: $display-grey;
-  fill: none;
-}
 .Grey.Fill {
   fill: $display-grey;
   stroke: none;
 }
 
-.EarthFill {
-  fill: #9c480c;
-}
-.SkyFill {
-  fill: #0698ff;
-}
-.BlackFill {
+.BackgroundFill {
   fill: $display-background;
 }
 
-.TapeBackground {
-  fill: $display-grey;
-  stroke: none;
+path.rounded {
+  stroke-linecap: round;
+  stroke-linejoin: round;
 }
-.BackgroundFill {
-  fill: $display-background;
-  fill-rule: evenodd;
+
+text.shadow {
+  stroke: $display-background;
+  stroke-width: 1px;
+  paint-order: stroke;
 }
 
 circle.shadow,
@@ -301,20 +190,6 @@ rect.shadow {
   fill: none;
 }
 
-.ModeChangedPath {
-  visibility: visible !important;
-}
-
-.HiddenElement {
-  display: none;
-}
-
-
 .chrono {
   font-family: "NDChrono", monospace !important;
-}
-
-.nd-inverted-map-area {
-  background: $display-background;
-  fill: rgb(4,4,5);
 }
