--- a/fbw-a32nx/src/systems/instruments/src/PFD/pages/OANS/oans.scss
+++ b/fbw-a32nx/src/systems/instruments/src/PFD/pages/OANS/oans.scss
@@ -1,4 +1,4 @@
-﻿@import "../MsfsAvionicsCommon/definitions";
+﻿@import "../../../MsfsAvionicsCommon/definitions";
 
 @font-face {
   font-family: "Ecam";
