fix(ewd/sd): change some line colors to grey, add round linecap

--- a/fbw-a32nx/src/systems/instruments/src/EWD/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/EWD/style.scss
@@ -114,9 +114,10 @@ animation: pulsingS 1s step-end infinite;
     }
 
     .Separator {
-      stroke: $display-light-grey;
+      stroke: $display-grey;
       stroke-width: 4;
       fill: none;
+      stroke-linecap: round;
     }
 
     .AmberLine {
