finish PERF/TO, change mouse cursor color

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -66,6 +66,7 @@ $display-mfd-dark-grey: #3c3c3c;
   text-align: center;
   border: 2px outset $display-light-grey;
   padding: 9px 12px 5px 12px;
+  display: flex;
 }
 
 .MFDButton:hover {
