fix: xtk placing, ils info and vor issues

--- a/fbw-a32nx/src/systems/instruments/src/NDv2/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/NDv2/style.scss
@@ -226,3 +226,8 @@ rect.shadow {
   background: $display-background;
   fill: rgb(4,4,5);
 }
+
+path.rounded {
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
