add FMS/*/PERF/CLB page

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -27,6 +27,10 @@ $display-mfd-dark-grey: #3c3c3c;
   font-family: "Ecam", monospace;
 }
 
+.MFDLabel.green {
+  color: $display-green;
+}
+
 .MFDLabel.bigger {
   font-size: 24px;
 }
