feat(sd-fuel): make wing shape, FOB box and fuel used lines grey

--- a/fbw-a32nx/src/systems/instruments/src/SD/Pages/Fuel/Fuel.scss
+++ b/fbw-a32nx/src/systems/instruments/src/SD/Pages/Fuel/Fuel.scss
@@ -42,7 +42,7 @@
   }
 
   .EngineLine {
-    stroke: $display-white;
+    stroke: $display-grey;
     stroke-width: 2.5;
   }
 
@@ -54,7 +54,7 @@
   }
 
   .ThickShape {
-    stroke: $display-light-grey;
+    stroke: $display-grey;
     stroke-width: 2.5;
     fill: none;
   }
