--- a/fbw-a32nx/src/systems/instruments/src/EWD/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/EWD/style.scss
@@ -214,8 +214,7 @@ animation: pulsingS 1s step-end infinite;
 
     .LightGreyBox {
         stroke: none;
-        fill: $display-light-grey;
-        opacity: 0.2
+        fill: $display-grey;
     }
 
     .SlatsSmallWhite, .FlapsSmallWhite {
