fix: initial bunch of test findings

--- a/fbw-a32nx/src/systems/instruments/src/NDv2/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/NDv2/style.scss
@@ -208,6 +208,12 @@ tspan.Red,
   fill-rule: evenodd;
 }
 
+text.shadow {
+  stroke: $display-background;
+  stroke-width: 1px;
+  paint-order: stroke;
+}
+
 circle.shadow,
 line.shadow,
 path.shadow,
