--- a/fbw-a32nx/src/systems/instruments/src/OANC/styles.scss
+++ b/fbw-a32nx/src/systems/instruments/src/OANC/styles.scss
@@ -1,3 +1,7 @@
+// Copyright (c) 2021-2023 FlyByWire Simulations
+//
+// SPDX-License-Identifier: GPL-3.0
+
 @import "../Common/definitions";
 
 @font-face {
@@ -46,7 +50,9 @@
   background-color: black;
   color: white;
 
-  z-index: 99;
+  white-space: pre;
+
+  pointer-events: auto;
 }
 
 .oanc-label:hover {
@@ -95,11 +101,15 @@
 
 .oanc-top-mask {
   width: 100%;
-  height: 52px;
+  height: 60px;
   background-color: $display-background;
 }
 
 .oanc-bottom-mask {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   position: absolute;
   bottom: 0;
 
@@ -108,22 +118,84 @@
   background-color: $display-background;
 }
 
+.oanc-position {
+  padding: 1px;
+  border: solid 1.5px $display-yellow;
+  color: $display-yellow;
+  font-size: 24px;
+}
+
+.oanc-speed-info {
+  position: absolute;
+  top: 0;
+  left: 5px;
+
+  font-size: 24px;
+  white-space: pre;
+}
+
+#oanc-speed-info-1 {
+  padding-right: 35px;
+
+  font-size: 20px;
+  vertical-align: bottom;
+}
+
+#oanc-speed-info-2 {
+  padding-right: 7px;
+  color: $display-green;
+}
+
+#oanc-speed-info-3 {
+  padding-right: 5px;
+
+  font-size: 20px;
+  vertical-align: bottom;
+}
+
+#oanc-speed-info-4 {
+  width: 40px;
+  padding-right: 10px;
+  color: $display-green;
+}
+
+.oanc-wind-info {
+  position: absolute;
+  top: 27px;
+  left: 5px;
+
+  font-size: 24px;
+  white-space: pre;
+}
+
+#oanc-wind-info-1 {
+  color: $display-green;
+}
+
+#oanc-wind-info-2 {
+  font-size: 20px;
+}
+
+#oanc-wind-info-3 {
+  color: $display-green;
+}
+
 .oanc-airport-info {
   position: absolute;
   right: 0;
   color: $display-white;
   background-color: $display-background;
 
-  font-size: 24px;
+  font-size: 20px;
   white-space: pre;
 }
 
 #oanc-airport-info-line1 {
-  top: 0;
+  top: 5px;
 }
 
 #oanc-airport-info-line2 {
-  top: 23px;
+  top: 31px;
 }
 
 .oanc-airplane-shadow {
@@ -140,6 +212,8 @@
 
 .oanc-svg {
   font-family: "Ecam", monospace !important;
+
+  //z-index: 9;
 }
 
 .Magenta {
@@ -275,4 +349,48 @@ text.shadow {
   stroke: $display-background;
   stroke-width: 1px;
   paint-order: stroke;
+}
+
+
+$font-factor: 5;
+
+.FontLargest {
+  font-size: #{7px * $font-factor};
+}
+
+.FontLarge {
+  font-size: #{6.5px * $font-factor};
+}
+
+.FontMedium {
+  font-size: #{6px * $font-factor};
+}
+
+.FontIntermediate {
+  font-size: #{5.5px * $font-factor};
+}
+
+.FontSmall {
+  font-size: #{5px * $font-factor};
+}
+
+.FontSmallest {
+  font-size: #{4.5px * $font-factor};
+}
+
+.FontTiny {
+  font-size: #{4px * $font-factor};
+}
+
+.StartAlign {
+  text-align: start;
+  text-anchor: start;
+}
+.MiddleAlign {
+  text-align: center;
+  text-anchor: middle;
+}
+.EndAlign {
+  text-align: end;
+  text-anchor: end;
 }
