improve SW arch for number input field, enable alphanumeric inputs

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -388,6 +388,8 @@ $display-mfd-dark-grey: #3c3c3c;
   padding: 4px 2px;
   background-color: $display-background;
   border: 2px inset $display-light-grey;
+  overflow: hidden;
+  height: 37px;
 }
 
 .MFDNumberInputContainer:hover {
