onModified / this.props.value.set() refactoring

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -71,6 +71,7 @@ $display-mfd-dark-grey: #3c3c3c;
   border: 2px outset $display-light-grey;
   padding: 9px 12px 5px 12px;
   display: flex;
+  justify-content: center;
 }
 
 .MFDButton:hover {
